[package]
name = "dungeon_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"


[dependencies]
bevy = "0.14.1"
bevy-inspector-egui = "0.25.1"
bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
bevy_ecs_tilemap = { version = "0.14.0" }
leafwing-input-manager = "0.15.0"

[features]
default = ["bevy_ecs_tilemap/atlas"]
